- fixed contact us from in modal window on mobile

--- a/public/CSS/modal-menu.css
+++ b/public/CSS/modal-menu.css
@@ -246,7 +246,7 @@
     .modal-menu {
         height: 100vh;
         display: flex;
-        padding: 20% 5% 0 5%;
+        padding: 0 5% 0 5%;
         align-items: center;
         flex-direction: column;
         justify-content: center;
@@ -265,6 +265,10 @@
         transform: translateY(0);
         transition: -webkit-transform 0.6s cubic-bezier(0.42, 0, 0.58, 1), opacity 0s 0.6s;
         transition: transform 0.6s cubic-bezier(0.42, 0, 0.58, 1), opacity 0s 0.6s;
+    }
+
+    #modal-contact-us-form {
+        height: 250px;
     }
 
     .modal-menu-gallery {
@@ -324,8 +328,16 @@
     #modal-menu .inp{
         display: flex;
         flex-direction: column;
-        padding-top: 15%;
+        padding-top: 10%;
         /* padding-left: 12%;
         padding-right: 10%; */
+    }
+
+    #modal-menu .inp label {
+        width: 95%;
+    }
+
+    #modal-menu .inp .submit-container {
+        width: 100%;
     }
 }
